# heddlemd

./: .copier-answers.yml  .gitignore  Cargo.toml  Containerfile  README.md  build.rs
.claude/: settings.local.json
.guardrails/: interface.sh
.podman/: interface.sh
.rqm/: managed_paths
book/: book.toml
docs/: architecture.md  long-range-electrostatics.md
kernels/: andersen.cu  angle.cu  barostat.cu  coulomb.cu  dihedral.cu  exclusions.cuh  fill.cu  forces.cu  integrate.cu  langevin.cu  lj_spme_real_fused.cu  mc_barostat.cu  minimize.cu  morse.cu  mtk.cu  neighbor.cu  nose_hoover.cu  pair_compute.cuh  pair_force.cu  pair_frame.cuh  pbc.cuh  philox.cuh  precision.cuh  reduce.cu  settle.cu  shake.cu  spme_real.cu  spme_recip.cu  spme_spread_gather.cuh
rqm/: build-pipeline.md  cuda-graphs.md  error-handling.md  integration.md  lj-pair-force.md  pair-reduction.md  particle-state.md  performance-analysis.md  pipeline-reproducibility.md  pipeline-reversibility.md  precision.md  registry-framework.md  registry.json  simulation-box.md  simulation-runner.md
scripts/: gen_atomic_units.py  ncu_timings.sh
src/: integrator.rs  lib.rs  main.rs  pbc.rs  precision.rs  registries.rs  registry.rs  runner.rs  state.rs  timings.rs
tests/: analyze.rs  barostats_berendsen.rs  barostats_c_rescale.rs  barostats_mc.rs  constraint_framework.rs  coulomb_pair_force.rs  determinism.rs  displacement_check.rs  error_handling.rs  forces_angle.rs  forces_bonds.rs  forces_dihedral.rs  forces_framework.rs  forces_harmonic_bond.rs  forces_morse.rs  graph_scalar_selection.rs  io_config.rs  (+40 more)
(+853 files in other folders)
